# CodeProject2026

./: .gitignore  README.md  example_usage.py  pyproject.toml  requirements-base.txt  requirements.txt  setup.sh  test_endpoints.sh
app/: __init__.py  llm_service.py  main.py  models.py  prompts.py
